<resources>
    <string name="app_name">Supermanket</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="splash_text">Splaaaash</string>
    <string name="btn_login">Ingresar</string>
    <string name="btn_register">Crear cuenta</string>
    <string name="btn_facebook_login">Ingresa con Facebook</string>
    <string name="lbl_email_login">Correo Electrónico o Usuario</string>
    <string name="lbl_password">Contraseña</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="app_id">425241064229350</string>
    <string name="lbl_username_register">Usuario</string>
    <string name="lbl_email_register">Email</string>
    <string name="lbl_female_register">Soy Mujer</string>
    <string name="lbl_male_register">Soy Hombre</string>
    <string name="lbl_birthday_register">Fecha de Nacimiento</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="profile_section1">Información</string>
    <string name="profile_section2">Accesorios</string>
    <string name="profile_section3">Efectos</string>
    <string name="profile_section4">Fotos</string>
    <string name="title_activity_user_full_picture">UserFullPicture</string>
    <string name="menu_title1">Inicio</string>
    <string name="menu_title2">Cercanos</string>
    <string name="menu_title3">Mensajes</string>
    <string name="menu_title4">Perfil</string>
    <string name="menu_title5">Cerrar sesión</string>
    <string name="menu_title6">Buscar gente</string>
    <string name="mode">Mode</string>
    <string name="mode_left">Left</string>
    <string name="mode_right">Right</string>
    <string name="dashboard_near_users_btn">Quién está cerca mío</string>
    <string name="lbl_confirm_password">Confirmar contraseña</string>
    <string name="title_activity_users_map">UsersMap</string>
    <string name="btn_ofertar">Ofertar</string>
    <string name="btn_buy">Comprar</string>
    <string name="btn_send_message">Enviar mensaje</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_user_image_gallery">UserImageGallery</string>
    <string name="title_activity_messages_list">MessagesList</string>
    <string name="title_activity_message_detail">MessageDetail</string>
    <string name="lbl_profile_crazy">Lo más loco que he hecho es:</string>
    <string name="lbl_profile_religion">Religión:</string>
    <string name="lbl_profile_language">Idiomas:</string>
    <string name="lbl_profile_occupation">A que te dedicas:</string>
    <string name="lbl_profile_favoritealbum">Disco favorito:</string>
    <string name="lbl_profile_favoritebook">Libro favorito:</string>
    <string name="lbl_profile_favoriteartist">Artista favorito:</string>
    <string name="lbl_profile_favoritemovie">Película favorita:</string>
    <string name="lbl_profile_joke">Un chiste:</string>
    <string name="lbl_profile_drink">Un trago:</string>
    <string name="lbl_profile_quote">Una frase:</string>
    <string name="lbl_profile_favoritecountry">País favorito:</string>
    <string name="lbl_profile_hobby">Hobby:</string>
    <string name="lbl_profile_favoritedate">Cita ideal:</string>
    <string name="lbl_profile_sport">Deporte:</string>
    <string name="lbl_profile_favoritefood">Comida favorita:</string>
    <string name="lbl_profile_zodiacsign">Signo del zodíaco:</string>
    <string name="lbl_profile_politics">Tendencia política:</string>
    <string name="lbl_profile_malechilds">Hijos:</string>
    <string name="lbl_profile_femalechilds">Hijas:</string>
    <string name="lbl_profile_hometype">Vivienda:</string>
    <string name="lbl_profile_beachhouse">Casa en la playa:</string>
    <string name="lbl_profile_haspool">Piscina:</string>
    <string name="lbl_profile_hasmotorcycle">Moto:</string>
    <string name="lbl_profile_hasbike">Bicicleta:</string>
    <string name="lbl_profile_aboutme">Sobre mi</string>
    <string name="lbl_profile_information">Información Nutricional</string>
    <string name="lbl_profile_information_female">Información de la clienta</string>
    <string name="lbl_profile_accessories">Accesorios</string>
    <string name="lbl_profile_effects">Efectos Secundarios</string>
    <string name="lbl_profile_defects">Mañas:</string>
    <string name="lbl_profile_hates">Cosas que odio:</string>
    <string name="lbl_profile_drinks">Bebo:</string>
    <string name="lbl_profile_smokes">Fumo:</string>
    <string name="lbl_profile_favoritedrug">Droga favorita:</string>
    <string name="lbl_profile_sexposes">Poses sexuales:</string>
    <string name="lbl_profile_sextoys">Juguetes sexuales:</string>
    <string name="lbl_profile_guiltypleasure">Placer culpable:</string>
    <string name="lbl_profile_sexualfantasy">Fantasía Sexual:</string>
    <string name="lbl_profile_fetishes">Fetiches</string>
    <string name="lbl_profile_livewith">Vive con:</string>
    <string name="lbl_profile_salary">Sueldo:</string>
    <string name="lbl_profile_hasjacuzzi">Jacuzzi:</string>
    <string name="lbl_profile_hascar">Auto:</string>
    <string name="lbl_profile_haspet">Mascota:</string>
    <string name="title_activity_account">Account</string>
    <string name="lbl_account_personal">Datos personales</string>
    <string name="lbl_account_aboutme">Sobre mí</string>
    <string name="lbl_account_information">Información nutricional</string>
    <string name="lbl_account_accessories">Accesorios</string>
    <string name="lbl_account_effects">Efectos secundarios</string>
    <string name="cd_account_avatar">User Avatar</string>
    <string name="lbl_account_name">Nombre</string>
    <string name="lbl_account_weight">Peso</string>
    <string name="lbl_account_height">Altura</string>
    <string name="lbl_account_country">País</string>
    <string name="lbl_account_region">Región</string>
    <string name="lbl_account_county">Comuna</string>
    <string name="btn_account_save">Guardar cambios</string>
    <string name="btn_account_back">Volver</string>
    <string-array name="countries">
        <item>Argentina</item>
        <item>Brasil</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>España</item>
        <item>Mexico</item>
        <item>USA</item>
        <item>中国</item>
    </string-array>
    <string name="lbl_flavor_intelectual">Intelectual</string>
    <string name="lbl_flavor_ejecutivo">Ejecutivo</string>
    <string name="lbl_flavor_carretero">Carretero</string>
    <string name="lbl_flavor_deportista">Deportista</string>
    <string name="lbl_flavor_aventurero">Aventurero</string>
    <string name="lbl_flavor_fixero">Fixero</string>
    <string name="lbl_flavor_hipster">Hipster</string>
    <string name="lbl_flavor_tallero">Tallero</string>
    <string name="lbl_flavor_tuerca">Tuerca</string>
    <string name="lbl_flavor_gamer">Gamer</string>
    <string name="lbl_flavor_geek">Geek</string>
    <string name="lbl_flavor_timido">Tímido</string>
    <string name="lbl_flavor_artista">Artista</string>
    <string name="lbl_packages_rockero">Rockero</string>
    <string name="lbl_package_metalero">Metalero</string>
    <string name="lbl_package_casual">Casual</string>
    <string name="lbl_package_uniformado">Uniformado</string>
    <string name="lbl_package_skater">Skater</string>
    <string name="lbl_package_hiphop">Hip-Hop</string>
    <string name="lbl_package_otaku">Otaku</string>
    <string name="lbl_package_surfista">Surfista</string>
    <string name="lbl_package_verde">Verde</string>
    <string name="lbl_package_gotico">Gótico</string>
    <string name="lbl_package_motoquero">Motoquero</string>
    <string name="lbl_package_reggaetonero">Reggaetonero</string>
    <string name="lbl_package_zorron">Zorrón</string>
    <string name="lbl_package_parrillero">Parrillero</string>
    <string name="lbl_package_lana">Lana</string>
    <string name="lbl_package_pokemon">Pokemón</string>
    <string name="lbl_bonuspack_chef">Chef</string>
    <string name="lbl_bonuspack_vegetariano">Vegetariano</string>
    <string name="lbl_bonuspack_sixpack">Six Pack</string>
    <string name="lbl_bonuspack_fumador">Fumador</string>
    <string name="lbl_bonuspack_nofumador">No fumador</string>
    <string name="lbl_bonuspack_romantico">Romántico</string>
    <string name="lbl_bonuspack_musico">Músico</string>
    <string name="lbl_bonuspack_musculoso">Musculoso</string>
    <string name="lbl_bonuspack_millonario">Millonario y muriendo</string>
    <string name="lbl_bonuspack_cantante">Cantante</string>
    <string name="lbl_bonuspack_maestro">Maestro chasquilla</string>
</resources>