<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/side_navigation_menu_item1"
        android:icon="@drawable/ic_social_group"
        android:title="@string/menu_title1"/>
    <item
        android:id="@+id/side_navigation_menu_item6"
        android:icon="@drawable/ic_action_search"
        android:title="@string/menu_title6"/>
    <item
        android:id="@+id/side_navigation_menu_item2"
        android:icon="@drawable/ic_location_place"
        android:title="@string/menu_title2"/>
    <item
        android:id="@+id/side_navigation_menu_item3"
        android:icon="@drawable/ic_content_email"
        android:title="@string/menu_title3"/>
    <item
        android:id="@+id/side_navigation_menu_item4"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/menu_title4"/>
</menu>