<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin" >
    
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/flavors1"
            style="@style/PinkCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_flavor_intelectual" />

        <CheckBox
            android:id="@+id/flavors2"
            style="@style/PinkCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flavors1"
            android:text="@string/lbl_flavor_ejecutivo" />

        <CheckBox
            android:id="@+id/flavors3"
            style="@style/PinkCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flavors2"
            android:text="@string/lbl_flavor_carretero" />

        <CheckBox
            android:id="@+id/flavors4"
            style="@style/PinkCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flavors3"
            android:text="@string/lbl_flavor_deportista" />

        <CheckBox
            android:id="@+id/flavors5"
            style="@style/PinkCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flavors4"
            android:text="@string/lbl_flavor_aventurero" />

        <CheckBox
            android:id="@+id/flavors6"
            style="@style/PinkCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flavors5"
            android:text="@string/lbl_flavor_artista" />

        <CheckBox
            android:id="@+id/flavors7"
            style="@style/PinkCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flavors6"
            android:text="@string/lbl_flavor_timido" />

        <CheckBox
            android:id="@+id/flavors8"
            style="@style/PinkCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flavors7"
            android:text="@string/lbl_flavor_geek" />

        <CheckBox
            android:id="@+id/flavors9"
            style="@style/PinkCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flavors8"
            android:text="@string/lbl_flavor_gamer" />

        <CheckBox
            android:id="@+id/flavors10"
            style="@style/PinkCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flavors9"
            android:text="@string/lbl_flavor_tuerca" />

        <CheckBox
            android:id="@+id/flavors11"
            style="@style/PinkCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flavors10"
            android:text="@string/lbl_flavor_tallero" />

        <CheckBox
            android:id="@+id/flavors12"
            style="@style/PinkCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flavors11"
            android:text="@string/lbl_flavor_hipster" />

        <CheckBox
            android:id="@+id/flavors13"
            style="@style/PinkCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flavors12"
            android:text="@string/lbl_flavor_fixero" />
        
        <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flavors13"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" >

	        <Button
	            android:id="@+id/flavorsFormSaveBtn"
	            style="@style/button_text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/light_blue_button"
	            android:text="@string/btn_account_save" />
	
	        <Button
	            android:id="@+id/flavorsFormBackBtn"
	            style="@style/button_text"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1.71"
	            android:background="@drawable/gray_button"
	            android:text="@string/btn_account_back" />
	
	    </LinearLayout>
            
    </RelativeLayout>

</ScrollView>